# metac-bot-ha

./: .dockerignore  .env.example  .env.template  .flake8  .gitignore  CHANGELOG.md  CIRCUIT_BREAKER_SUMMARY.md  CLOSED_QUESTION_FILTER_FIX.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_ISSUES_FOUND.md  CRITICAL_PIPELINE_FIXES.md  DEPLOY.md  DEPLOYMENT_STATUS.md  Dockerfile  FALLBACK_FORECAST_CRISIS.md  GITHUB_CONFIGURATION.md  GITHUB_SECRETS_SETUP.md  HONEST_STATUS.md  INVESTIGATION_OPENROUTER_LIMITS.md  LICENSE  LINTING_ERRORS_COMPLETELY_FIXED.md  MANUAL_REFORECAST_GUIDE.md  Makefile  NEXT_STEPS.md  OPTIMAL_FREQUENCY_GUIDE.md  PIPELINE_ERROR_FIXES.md  PIPELINE_LINTING_COMPLETE.md  PIPELINE_STATUS_RESOLVED.md  PIPELINE_TEST_REPORT.md  README.md  README_new_repo.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  ROOT_CAUSE_API_KEYS.md  RUN_THIS_COMMAND.md  SECURITY_REMINDER.md  TASK_10_2_IMPLEMENTATION_SUMMARY.md  TIMEOUT_FIX_SUMMARY.md  TOURNAMENT_READINESS_REPORT.json  TOURNAMENT_READY.md  (+46 more)
.github/: copilot-instructions.md
.github/chatmodes/: kanban-endpoint-tester.chatmode.md  ux-ui-frontend-expert.chatmode.md
CodeFlattened_Output/: metac-bot-ha_flattened_part10.md  metac-bot-ha_flattened_part11.md  metac-bot-ha_flattened_part5.md  metac-bot-ha_flattened_part9.md
NOISE/: COMPREHENSIVE_PROJECT_ANALYSIS.md  DEPLOYMENT_VERIFICATION.md  DOCUMENTACION_PROYECTO.md  E2E_TEST_FIXES.md  GITHUB_ACTIONS_IMPORT_FIXES_COMPLETE.md  INTEGRATION_SUMMARY.md  NETWORK_RESILIENCE_GUIDE.md  PIPELINE_FIXES_COMPLETE.md  PIPELINE_FIXES_SUMMARY.md  PIPELINE_FIXES_VERIFICATION.md  PIPELINE_LINTING_FIXES.md  QUICK_DEPLOYMENT_GUIDE.md  SECURITY_CHECKLIST.md  TASK10_PERFORMANCE_REPORT.md  TASK_4_IMPLEMENTATION_SUMMARY.md  auto_fix_linting.sh  ci_deployment_report.json  community_benchmark.py  docker-compose.blue.yml  docker-compose.green.yml  quick_fix.py  run_summary_minibench.json  run_task10_integration_tests.py  run_task10_performance_tests.py  simple_openrouter_test.py  start_bot.py  test_all_secrets.py  test_all_secrets_fixed.py  test_asknews_forecasting_tools.py  test_openrouter_config.py  test_pipeline.py  test_pipeline_core.py  update_poetry_lock.py
chatmodes/: software-architect.chatmode.md
cli/: run_forecast.py
config/: FAST_TESTING_CONFIG.md  config.dev.yaml  config.prod.yaml  config.production.yaml  config.test.yaml  logging.yaml
configs/: feature_flags.json
diagnostics/: check_missing_forecasts.py  openrouter_probe.py
docs/: API_DOCUMENTATION.md  BUDGET_MANAGEMENT_IMPLEMENTATION.md  BUDGET_MONITORING_GUIDE.md  BUDGET_TROUBLESHOOTING_GUIDE.md  DEPLOYMENT.md  EMERGENCY_DEPLOYMENT.md  FORK_DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_FINAL.md  OPENROUTER_CONFIGURATION.md  OPENROUTER_FREE_MODELS.md  OPERATION_MODES_IMPLEMENTATION.md  OPTIMIZED_RESEARCH_PROMPTS.md  PERFORMANCE_MONITORING_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_RECOMMENDATIONS.md  PROJECT_ARCHITECTURE.md  README_UPDATED.md  SYSTEM_FLOWS.md  TOURNAMENT_INTEGRATION_GUIDE.md  TOURNAMENT_SCHEDULING_IMPLEMENTATION.md  TOURNAMENT_SETUP_GUIDE.md  TRI_MODEL_GPT5_IMPLEMENTATION.md  agentic-usecases.md  disaster_recovery_runbook.md  forecast_pipeline.instructions.md  infrastructure_layer.instructions.md  metaculus_client.instructions.md  tools.instructions.md
examples/: budget_aware_operation_manager_demo.py  cost_tracking_demo.py  dynamic_weight_adjuster_demo.py  error_handling_system_demo.py  forecasting_stage_demo.py  monitoring_system_demo.py  multi_stage_validation_pipeline_demo.py  operation_modes_demo.py  optimized_research_prompts_demo.py  performance_monitoring_demo.py  submission_validation_demo.py  task_complexity_analyzer_demo.py  tournament_analytics_demo.py  tournament_scheduling_demo.py  tournament_scope_management_demo.py  validation_stage_demo.py
k8s/: deployment-template.yaml
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.staging.yml  prometheus.yml
nginx/: blue.conf  green.conf  nginx.conf
scripts/: backup_strategy.py  blue-green-deploy.sh  check_api_limits.py  check_asknews_quota.py  check_connectivity.sh  check_openrouter_limits.py  ci_deployment_check.py  configure-tournament-scheduling.sh  deploy.sh  deployment_cost_monitor.py  deployment_health_monitor.py  deployment_readiness_check.py  deployment_validation.py  emergency_deployment_verification.py  health-check.sh  investigate_date_question.py  local_deployment_check.py  local_minibench_ci.sh  manual_cloud_deployment.sh  minibench_guard.sh  openrouter_curl_probe.sh  performance_regression_check.py  pre_deployment_checks.py  quota_analyzer.py  rollback.sh  run-local.sh  security_gate_check.py  security_scan.py  setup-github-secrets.sh  simulate_circuit_breaker.py  smoke_tests.py  test_available_apis.py  test_budget_core.py  test_budget_integration.py  test_budget_management.py  test_circuit_breaker.py  test_cost_optimized_config.py  test_date_questions.py  test_deployment_docs.py  test_enhanced_anti_slop.py  (+15 more)
src/: main.py
testdata/: mock_questions.json
tests/: __init__.py  conftest.py  mutation_testing.py  test_budget_aware_model_router.py  test_cost_optimization_service.py  test_coverage_report.py  test_forecasting_stage_service.py  test_model_catalog.py  test_multi_stage_validation_pipeline.py  test_openrouter_quota_circuit.py  test_paginated_fetcher.py  test_publish_gate.py  test_publish_gate_extended.py  test_subject_extractor.py  test_validation_stage_service.py
workflows/: github-actions.yml
(+437 files in other folders)
